<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/latitude_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="3dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latitude_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side"
        android:hint="@string/latitude"
        app:layout_constraintBottom_toTopOf="@+id/longitude_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/name_input_layout"
        app:layout_constraintStart_toStartOf="@+id/name_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitude_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side"
        android:hint="@string/longitude"
        app:layout_constraintBottom_toTopOf="@+id/annotation_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/latitude_input_layout"
        app:layout_constraintStart_toStartOf="@+id/latitude_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/latitude_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/annotation_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginEnd="@dimen/margin_side"
        android:hint="@string/annotation"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintEnd_toEndOf="@+id/longitude_input_layout"
        app:layout_constraintStart_toStartOf="@+id/longitude_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/longitude_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/annotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/annotation_input_layout"
        app:layout_constraintStart_toStartOf="@+id/annotation_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/annotation_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>